fix(animation): tweaking detail page animation, fix placeholder img not showing when deployed

--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -17,7 +17,7 @@
   }
 
   .background-placeholder {
-    background: url('https://media.istockphoto.com/vectors/thumbnail-image-vector-graphic-vector-id1147544807?k=6&m=1147544807&s=612x612&w=0&h=8CXEtGfDlt7oFx7UyEZClHojvDjZR91U-mAU8UlFF4Y=');
+    background: url('/assets/placeholder.jpg');
     background-size: cover;
     background-position: center;
   }
